monitoring/ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.infra.rwx.im`)
    kind: Rule
    middlewares:
    - name: prometheus-auth
    services:
    - name: prometheus-operated
      kind: Service
      port: 9090
  tls:
    secretName: prometheus.infra.rwx.im-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-query-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`thanos-query.infra.rwx.im`)
    kind: Rule
    middlewares:
    - name: prometheus-auth
    services:
    - name: thanos-query
      kind: Service
      port: 10902
  tls:
    secretName: thanos-query.infra.rwx.im-tls
